--- a/.gitignore
+++ b/.gitignore
@@ -401,3 +401,4 @@ plots/epoch_198.png
 plots/epoch_199.png
 plots/epoch_200.png
 project/predictions animation.gif
+project/codeDateTimeCloseVolume.csv
